tests/language_modules/02_import/valid/import_exposing.vf
module App.Main

import Banking.Proofs exposing balance_never_negative

procedure main()
is
    check true
end main

end App.Main