tests/language_modules/02_import/invalid_syntax/missing_exposing_list.vf
module App.Main

import Banking.Proofs exposing

procedure main()
is
    check true
end main

end App.Main